--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,15 @@ body{
     margin: 0 auto;
     padding-top: 100px;
 }
+
+.text-fields {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 22px;
+}
+
+.input-field{
+    width: 50%;
+}
